Bug 1822695: Group invite button overlaps pending friend request on Profile page
Put .pendingfriendcard on right side of pageheader and adjusted
margins to fit for responsive.

Also fixed card-footers to apply correct background and border color
for different statuses so .pendingfriendcard inherits the warning
color properly.

behatnotneeded

--- a/htdocs/theme/default/sass/layout/card/_card-header.scss
+++ b/htdocs/theme/default/sass/layout/card/_card-header.scss
@@ -47,3 +47,7 @@
         }
     }
 }
+
+.card-header:first-child {
+    @include border-top-radius(0);
+}
